# mini-rag-chatbot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: chat.py  documents.py
app/services/: embedding_service.py  llm_service.py  rag_service.py
app/worker/: celery_app.py  tasks.py
scripts/: seed_documents.py
seed_data/: README.md  wellness_docs.json
