[project]
name = "mini-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "pgvector>=0.4.2",
    "psycopg>=3.2.13",
    "pydantic-ai>=0.8.1",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.1",
    "sqlmodel>=0.0.34",
    "uvicorn>=0.39.0",
]
